Closed Bug 526397 Opened 15 years ago Closed 15 years ago

"FAILED TO exec() CHILD PROCESS" for XRE_InitParentProcess() processeses launched with a relative path

Categories

(Core :: IPC, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: cjones, Assigned: cjones)

References

Details

For example, running

 ./ipdlunittest Foo

will cause the exec of mozilla-runtime to fail with the error

vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
---->   FAILED TO exec() CHILD PROCESS   <---
---->     path: mozilla-runtime
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

We already implemented a command-line-arg canonicalizer (?) for nsAppRunner.  Easiest fix is to add this to the XUL API.
This broke the --disable-ipc builds, please fix ASAP.
specifically

Undefined symbols:
  "_XRE_InitCommandLine", referenced from:
      _XRE_main in nsAppRunner.o
ld: symbol(s) not found
Depends on: 526655
Missed the RESOLVED->FIXED.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.