bug 526397: fix up command line init. no r=, minor